@startuml
skinparam classAttributeIconSize 0
scale 4096 width
title 图分割算法

' 泛化
segmentation.GraphSegmentation <|-- segmentation.GraphSegmentationImpl
' 依赖
segmentation.PointSet <.. segmentation.GraphSegmentationImpl
segmentation.Edge <.. segmentation.GraphSegmentationImpl
' 聚合
segmentation.PointSetElement o-- segmentation.PointSet

class segmentation.GraphSegmentation {
    ' 方法
    + virtual void processImage(cv::InputArray src, cv::OutputArray dst) = 0
    .. Setter ..
    +virtual void setSigma(double sigma) = 0
    + virtual void setK(float k) = 0
    + virtual void setMinSize(int min_size) = 0
    .. Getter ..
    + virtual double getSigma() = 0
    + virtual float getK() = 0
    + virtual int getMinSize() = 0
}

class segmentation.GraphSegmentationImpl {
    ' __ 字段 __
      - double sigma
      - float k
      - int min_size
      - string name_
    ____
    - void filter(const Mat &img, Mat &img_filtered)
    - void buildGraph(Edge **edges, int &nb_edges, const Mat &img_filtered)
    - void segmentGraph(Edge *edges, const int &nb_edges, const Mat &img_filtered, PointSet **es)
    - void filterSmallAreas(Edge *edges, const int &nb_edges, PointSet *es)
    - void finalMapping(PointSet *es, Mat &output)
    .. constructor ..
    + GraphSegmentationImpl()
    .. override ..
    + virtual void processImage(cv::InputArray src, cv::OutputArray dst) override
    +virtual void setSigma(double sigma) override
    + virtual void setK(float k) override
    + virtual void setMinSize(int min_size) override
    + virtual double getSigma() override
    + virtual float getK() override
    + virtual int getMinSize() override
}

class segmentation.Edge {
    ' 属性
    + int from
    + in to
    + float weight
    ' 方法
    + bool operator<(const Edge &e) const
}

class segmentation.PointSet {
    ' 属性
    - PointSetElement *mapping
    + int nb_elements
    ' 方法
    + PointSet(int nb_elements_)
    + ~PointSet()
    + int getBasePoint(int p)
    + void joinPoints(int p_a, int p_b)
    + int size(unsigned int p)
}

class segmentation.PointSetElement {
    ' 属性
    + int p
    + int size
    ' 方法
    + PointSetElement()
    + PointSetElement(int p_)
}
@enduml